Fix overflow

--- a/src/pages/City/City.css
+++ b/src/pages/City/City.css
@@ -1,4 +1,4 @@
 .city {
     height: 100%;
-    margin: 130px 50px;
+    margin: 0 50px;
 }
